Fri Jul  6 00:27:17 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

 * scripts/dpkg-divert.8: Fix layout error in synopsis

Sun Jul  1 16:12:30 CDT 2001 Adam Heath <doogie@debian.org>

  * main/archives.c: When a package is on hold, -E will not skip the same
    version when installing.

Sat Jun 30 01:48:15 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * doc/ru/*: Added Russian translations from Alexey Mahotkin
    <alexm@hsys.msk.ru>

Mon Jun 25 03:31:55 CDT 2001 Adam Heath <doogie@debian.org>

  * Merged in changes from 1.9.11 to 1.9.14 branches.

    + scripts/dpkg-source.pl: Disable source package sanity checking.
    + scripts/dpkg-source.pl: make Uploaders optional.
    + scripts/controllib.pl: Set the default to convert warnerrors
      into warnings.
    + scripts/dpkg-source.pl: Remove a warnable error if the orig.tar.gz
      contains './'.
    + scripts/dpkg-source.pl: Handle symlinks in the tarball, and don't
      error out if found.
    + scripts/dpkg-source.pl: Add support for an Uploaders field, which is
      read from the first paragraph of debian/control, and propagated to
      the .dsc.  This lists the people allowed to upload a package.  If it
      is not set, then the value of the Maintainer is placed into this
      field of the .dsc.  This bumps the .dsc format to 1.1.
    + scripts/dpkg-source.pl: Handle stating of truncated cpio filenames
      (100 char limit, bah)
    + scripts/dpkg-source.pl: Set LC_ALL before calling external programs,
      when we are going to parse their output.
    + scripts/dpkg-source.pl: Move the check for '\n' and '././@LongLink'
      before the check for leading './'.
    + dselect/main.cc: Handle window resize in main menu
    + scripts/dpkg-source.pl: Add a warnable error if the orig.tar.gz
      contains './'.
    + scripts/dpkg-source.pl: Handle the case where a single directory
      exists in the orig.tar.gz, but it is NOT of the form <pkg>-<ver>.