@@ -6,6 +6,7 @@ dpkg (1.10) unstable; urgency=low
   * Fix layout problem in dpkg-divert manpage. Closes: Bug#103667
   * When a package is set to hold, and a reinstallation is requested,
     -E will not properly skip it.  Closes: #45787.
+  * Make dpkg-checkbuilddeps use dpkg-architecture. Closes: Bug#104230
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
