@@ -1,3 +1,8 @@
+Mon May 21 03:48:29 CEST 2001 Marcus Brinkmann <brinkmd@debian.org>
+
+  * scripts/dpkg-checkbuilddeps.pl: Call dpkg-architecture instead dpkg
+    to determine the host architecture.  Rename BUILD_ARCH to HOST_ARCH.
+
 Fri Jul  6 00:27:17 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
  * scripts/dpkg-divert.8: Fix layout error in synopsis
